<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/bruna"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/ic_eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/question_mark_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/baseline_question_mark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/saldo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saldo_atual"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/saldo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_1_400_00"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/saldo_label"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:padding="8dp"
        android:rowCount="2"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="137dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_gray"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_pix"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pix"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_gray"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/baseline_reorder_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pagamentos"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_gray"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_shopping_pan"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shopping_pan"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_blue"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_emprestimos"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empr_stimos"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/sa_de_de_qualidade_pagando_apenas_r_8_99_por_m_s"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/icon_flower"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_flower"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="552dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_blue_background"
            android:gravity="start|center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_o"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pe_a_um_cart_o_agora"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_white_background"
            android:gravity="start|center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empr_stimos"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pegue_at_nr_12_000_00"
                android:textColor="#000000"
                android:textSize="19sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/circular_background"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circular_background"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="64dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/arrow_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        android:tint="#B0B0B0"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="ContentDescription,MissingConstraints,UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>
